Fixed landing page on mobile

--- a/autoscheduler/frontend/src/components/App/App.css
+++ b/autoscheduler/frontend/src/components/App/App.css
@@ -14,10 +14,3 @@
     display: flex;
     flex-direction: column;
 }
-
-@media screen and (min-width: 768px) {
-    .router {
-        height: 100%;
-        overflow-y: hidden;
-    }
-}
