--- a/autoscheduler/frontend/src/components/LandingPage/LandingPage.css
+++ b/autoscheduler/frontend/src/components/LandingPage/LandingPage.css
@@ -1,14 +1,9 @@
 .container {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     height: auto;
     justify-content: center;
-}
-
-@media screen and (min-width: 768px) {
-    .container {
-        height: 100%;
-    }
 }
 
 .dialog-container {
